<resources>
    <string name="app_name">Checklist Claims</string>
    <string name="select_inspection_date">--Select Inspection Date--</string>
    <string name="location_icon">Location icon</string>
    <string name="point_of_origin">Point Of Origin</string>
    <string name="address_hint_text">Address</string>
    <string name="imagepicker_text_gif">GIF</string>
    <string name="image_picker_action_done">DONE</string>
    <string name="imagepicker_title_folder">Albums</string>
    <string name="edit_report">Edit</string>
    <string name="delete_report">Delete</string>
    <string name="view_report">View</string>
    <string name="_2_per_page">2 per page</string>
    <string name="_4_per_page">4 per page</string>
    <string name="enter_note">Enter Note</string>
    <string name="enter_client_number">Claim number</string>
    <string name="enter_report_description">Enter description</string>
    <string name="enter_report_title">Enter title</string>
    <string name="menu_image">Menu Image</string>
    <string name="menu_title">Menu Title</string>
    <string name="add">Add</string>
    <string name="welcome">Welcome</string>
    <string name="add_category">ADD CATEGORY</string>
    <string name="category_details">Category Details</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_name">Enter Name</string>
    <string name="update_category">Update Category</string>
    <string name="folder">Folder</string>
    <string name="search_place">Search Place</string>
    <string name="edit_label">Edit Label</string>
    <string name="damage">Damage</string>
    <string name="overview">Overview</string>
    <string name="category_title">Category Title</string>
    <string name="delete_report_msg">Are you sure you want to delete this report ?</string>
    <string name="delete_report_dialog_title">Delete Report</string>
    <string name="please_enter_title">Please enter title.</string>
    <string name="enter_description_message">Please enter description.</string>
    <string name="enter_insurance_name_message">Please enter insurance name.</string>
    <string name="enter_claim_number_message">Please enter claim number.</string>
    <string name="please_add_address_message">Please enter address for incidence.</string>
    <string name="report_gen_success_msg">Report generated successfully.</string>
    <string name="enter_square_footage">Enter square footage</string>
    <string name="please_select_images_per_page">Please select number of images per page. </string>
    <string name="peril_details">Peril Details</string>
    <string name="add_peril">Add Peril</string>
    <string name="share_report_button">Share report button</string>
    <string name="select_roof_system">--Select Roof System--</string>
    <string name="select_siding">--Select Siding--</string>
    <string name="select_foundation">--Select Foundation--</string>
    <string name="select_building_type">--Select Building Type--</string>
    <string name="add_roof_system">Add Roof System</string>
    <string name="roof_system_details">Roof System Details</string>
    <string name="add_siding">Add Siding</string>
    <string name="siding_details">Siding Details</string>
    <string name="foundation_details">Foundation Details</string>
    <string name="add_foundation">Add Foundation</string>
    <string name="add_building_type">Add Building Type</string>
    <string name="building_details">Building Details</string>
    <string name="please_enter_name">Please enter name.</string>
    <string name="please_add_valid_square_footage_message">Please enter valid square footage number.</string>
    <string name="peril_menu">Manage Peril</string>
    <string name="coverage_menu">Manage Coverage</string>
    <string name="settings_menu">Settings</string>
    <string name="category_menu">Manage Category</string>
    <string name="insured_name">Insured Name</string>
    <string name="p_o_o">Point Of Origin</string>
    <string name="camera_error_msg">Something went wrong.Please retry with system camera app.</string>
    <string name="retry">RETRY</string>
    <string name="coverage_details">Coverage Details</string>
    <string name="add_coverage">Add Coverage</string>
    <string name="select_coverage_type">--Select Coverage Type--</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="geo_tag">Geo Tag</string>
    <string name="image_name">Image name.</string>
    <string name="report_insured_name">Insured Name.</string>
    <string name="report_claim_number">Claim Number.</string>
    <string name="coverage_type">Coverage Type</string>
    <string name="image_quality_setting">Image Quality</string>
    <string name="map_setting">Google Map In Report</string>
    <string name="label_validation_msg">Label with same name already exists.</string>
    <string name="enter_report_by">Report by</string>
    <string name="register">Register</string>
    <string name="enter_email_id">Email</string>
    <string name="please_enter_report_by">Please enter report by.</string>
    <string name="please_enter_email_id">Please enter email id.</string>
    <string name="enter_report_description_setting">Report Description</string>
    <string name="enter_report_title_setting">Report Title</string>
    <string name="please_enter_report_description">Please enter report description.</string>
    <string name="none">none</string>
    <string name="satellite_view">Satellite View</string>
    <string name="normal_view">Normal View</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="imagepicker_back_msg">Pressing back will lose your image selections if any, are you sure wanna go back ?</string>
    <string name="go_back_msg_title">Go Back</string>
    <string name="back_from_report_act_msg">Pressing back will take you to previous screen, are you sure wanna go back ?</string>
    <string name="enter_company_name_setting">Company Name</string>
    <string name="please_enter_company_name">Please enter company name.</string>
    <string name="chose_logo">Select Logo</string>
    <string name="please_enter_rep_title">Please enter report title.</string>
    <string name="please_enter_address">Please enter address.</string>
    <string name="enter_address_setting">Office address</string>
    <string name="enter_token">Enter token</string>
    <string name="terms_of_services">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
       </string>
    <string name="please_check_terms_of_services">Accept terms of services.</string>
    <string name="disagreement_title">Disagree</string>
    <string name="disagreement_msg">Are you sure, you want to disagree?</string>
    <string name="i_agree">Agree</string>
    <string name="don_t_agree">Disagree</string>
    <string name="i_have_read_and_accept_the_terms_of_services">I have read and accept the Terms Of Service.</string>
    <string name="please_enter_valid_email_id">Please enter valid email address.</string>
    <string name="pin_location">Unpin Location</string>
    <string name="current_location">Current Location</string>
</resources>