<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="4"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="0dip"
        android:layout_height="28dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:contentDescription="@string/menu_image"
        android:src="@drawable/ic_cloud" />

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/menu_title"
        android:textColor="@color/white_color" />
    <Button
        android:id="@+id/addInspection"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="35dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/add"
        android:textSize="12sp"/>
</LinearLayout>