<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_image_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckedTextView
                android:id="@+id/isPointOfOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_chip_drawable_gray"
                android:text="@string/point_of_origin"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <CheckedTextView
                android:id="@+id/damageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/shape_chip_drawable_gray"
                android:text="@string/damage"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <CheckedTextView
                android:id="@+id/overviewTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/shape_chip_drawable_gray"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageInfo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="5dp"
                android:src="@drawable/ic_info_black_24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/imageCoverageType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableRight="@drawable/ic_key_arrow_down"
            android:imeOptions="actionNext"
            android:nextFocusRight="@+id/imageTitle"
            android:padding="7dp"
            android:text="@string/coverage_type"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/image_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/enter_note"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:padding="5dp"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>