<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reportTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_report_title"
            android:inputType="text"
            android:maxLength="37"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reportDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_report_description"
            android:maxLines="3"
            android:minLines="3"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/insuredName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
            android:hint="@string/insured_name"
            android:inputType="text"
            android:maxLength="37"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/claimNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
            android:hint="@string/enter_client_number"
            android:inputType="text"
            android:maxLength="37"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:visibility="visible">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reportBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_report_by"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
